# evd-catheter-segmentation

./: .gitattributes  .gitignore  README.md  main_train.py  pyproject.toml  requirements.txt
configs/: train.yaml
datasets/: .gitignore  README.md
datasets/create_external_test_set/: README.md  generate_frames.py  generate_prompted_sam_masks.py  selected_points.json  video_segments.example.json
datasets/create_synthetic_dataset/: README.md  __init__.py  config.py  generate.py  generate_epoch_folders.py  quality_report.py  renderer.py  requirements.txt  sampler.py
datasets/create_synthetic_dataset/3d_tools/catheter/: catheter_001.glb  catheter_002.glb  catheter_003.glb  catheter_004.glb  catheter_005.glb  catheter_006.glb  catheter_007.glb
export/: README.md  __init__.py
export/output_models_int8_npu/: README.md  __init__.py
export/output_models_int8_npu/code/: __init__.py  compute_metrics.py  config.yaml  model_loader.py  run_compile_profile_infer.py  upload_dataset.py
fastvit_models/: common.py  factory.py  heads.py
other_models/: common.py  factory.py
paper_checkpoint/: README.md
paper_checkpoints_int8/: README.md
reports/: README.md  folder_inference.py  general_checkpoint_test.py  paper_checkpoint_test.py
scripts/: download_external_deps.sh
utils/: checkpointing.py  env.py  eval_iou.py  line_distance_loss.py  losses.py  metrics.py  run_dir.py  schedulers.py
utils/data/: augmentations.py  dataset.py  indexing.py  loaders.py  pipeline.py  transforms.py
utils/training/: amp.py  engine.py  logging.py
(+5 files in other folders)
